# rust-notes-cli

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  main.rs  notes.rs  settings.rs
