[package]
name = "rust-notes-cli"
version = "0.0.1"
license = "MIT"
authors = ["Daniel Solarte <danielsolartech@hotmail.com>"]
homepage = "https://github.com/danielsolartech/rust-notes-cli"
repository = "https://github.com/danielsolartech/rust-notes-cli"
edition = "2018"
default-run = "rust-notes-cli"

[[bin]]
name = "rust-notes-cli"
path = "src/main.rs"

[dependencies]
dirs = "3.0"
rustyline = "6.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
